tests/baselines/reference/optionalPropertiesSyntax.errors.txt
==== tests/cases/compiler/optionalPropertiesSyntax.ts (15 errors) ====
    interface fnSigs {
        //functions signatures can be optional
        fn(): void;
        fn?(): void; //err
        ~~~~~~~~~~~
!!! error TS2144: Duplicate overload signature for 'fn'.
        ~~~~~~~~~~~
!!! error TS2153: Overload signatures must all be optional or required.
        fn2?(): void;
    }
    
    interface callSig {
        //Call signatures can't be optional
        (): any;
        ()?: any; //err
          ~
!!! error TS1005: ';' expected.
           ~
!!! error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
        ~~
!!! error TS2146: Duplicate overload call signature.
        ?(): any; //err
        ~
!!! error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
         ~~~~~~~
!!! error TS2146: Duplicate overload call signature.
    }
    
    interface constructSig {
        //Construct signatures can't be optional
        new (): any;
        new ()?: any; //err
              ~
!!! error TS1005: ';' expected.
               ~
!!! error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
        ~~~~~~
!!! error TS2147: Duplicate overload construct signature.
        new ?(): any; //err
    }
    
    interface propertySig {
        //Property signatures can be optional
        prop: any;
        prop?: any;
        ~~~~
!!! error TS2000: Duplicate identifier 'prop'.
        prop2?: any;
    }
    
    interface indexSig {
        //Index signatures can't be optional
        [idx: number]: any;
        [idx: number]?: any; //err
                     ~
!!! error TS1005: ';' expected.
                      ~
!!! error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
        ~~~~~~~~~~~~~
!!! error TS2233: Duplicate number index signature.
        ? [idx: number]: any; //err
        ~
!!! error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
        [idx?: number]: any; //err
    }